[project]
name = "tacextract"
version = "0.1.0"
description = "Time Activity Extraction of Dynamic PET DICOM data"
readme = "README.md"
authors = [
    { name = "Ulrich Lindberg", email = "ulrich.lindberg@regionh.dk" }
]
requires-python = ">=3.9"
dependencies = [
    "multiprocessing",
    "numpy",
    "pydicom",
    "nibabel",
    "tqdm",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tacextract"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
